# ev-instrument-cluster

./: .gitignore  CMakeLists.txt  LINUX_SETUP.md  resources.qrc
database/: schema.sql
docs/: ANIMATIONS_GUIDE.md  UI_LAYOUT_GUIDE.md
qml/: BatteryDisplay.qml  ChargingScreen.qml  ChargingStationMarker.qml  Cluster2W.qml.bak  Cluster4W.qml.bak  DevSimulator.qml  MapView.qml  PowerMeter.qml  Settings.qml  Speedometer.qml  Style.qml  TripComputer.qml  WarningLights.qml  WarningOverlay.qml  main.qml
src/: bmsinterface.cpp  bmsinterface.h  caninterface.cpp  caninterface.h  chargingmanager.cpp  chargingmanager.h  database.cpp  database.h  energycalculator.cpp  energycalculator.h  evvehicledata.cpp  evvehicledata.h  gpshandler.cpp  gpshandler.h  main.cpp  rangepredictor.cpp  rangepredictor.h  simulationreceiver.cpp  simulationreceiver.h
tools/: SIMULATOR_GUIDE.md  ev_simulator.py
